        - New: clean run for test cases (implemented using decorator)
        - Fixed: compatible with latest PlatformIO project structure (ver 3.6.1)
        - Fixed: many small fixes and improvements
        - Changed: 'java_cmd' parameter in 'settings.py' (simple 'java' by default)
        - Changed: move to double-quoted strings
        - Changed: remove '_getProjectNameByPath()' function (replaced by 'os.path.basename()')
        - Changed: vast f-strings usage
        - Changed: test '.ioc' file is updated to the latest STM32CubeMX version (4.27.0 at the moment)
        - Changed: use 'os.path.join()' instead of manually composing of paths
        - Changed: use 'with ... as ...' construction for opening files
        - Changed: 120 chars line width
        - Changed: PEP 8 conformity: variables and functions naming conventions
        - Changed: PEP 8 conformity: multi-line imports
        - Changed: 'miscs.py' module is renamed to 'util.py'

    ver. 0.73 (10-11.02.19):
        - New: use more convenient Python project structure
        - New: package can be install using setuptools
        - New: TODO list
        - New: '--directory' option is now optional if the program gets called from the project directory
        - Fixed: license copyright
        - Fixed: 'dot' path will be handle successfully now
        - Fixed: bug on case insensitive machines
        - Fixed: bug in tests that allowing to pass the test even in failure situation
        - Changed: test '.ioc' file is updated to the latest STM32CubeMX version (5.0.1 at the moment)
        - Changed: documentation improvements

    ver. 0.74 (27.02.19):
        - New: new internal _get_project_path() function (more clean main script)
        - Changed: util.py functions now raising the exceptions instead of forcing the exit
        - Changed: test '.ioc' file is updated to the latest STM32CubeMX version (5.1.0 at the moment)