@@ -75,5 +75,7 @@ stm32pio changelog:
 
     ver. 0.74 (27.02.19):
         - New: new internal _get_project_path() function (more clean main script)
+        - New: optional '--with-build' option for 'new' mode allowing to make an initial build to save a time
         - Changed: util.py functions now raising the exceptions instead of forcing the exit
         - Changed: test '.ioc' file is updated to the latest STM32CubeMX version (5.1.0 at the moment)
+        - Changed: documentation improvements
